# WaterwayMonitor

./: MonitoringData.json  appsettings.json  config.json
ControlCenter/: App.axaml  App.axaml.cs  ControlCenter.sln  Program.cs  ViewLocator.cs  app.manifest
ControlCenter/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ControlCenter/Views/: MainWindow.axaml  MainWindow.axaml.cs
DataCollector/: CMakeCache.txt  CMakeLists.txt  DataCollector  DataCollector.cpp  DataCollector.h  Makefile  cmake_install.cmake
DataPublisher/: DataPublisher.csproj  DataPublisher.sln  Program.cs  appsettings.json
DataPublisher/Common/Models/: InternetConfig.cs  MqttConfig.cs  TimerConfig.cs
DataPublisher/Common/Services/: JsonService.cs  MqttService.cs
DataPublisher/WaterMonitoring/Enums/: MonitoringParameters.cs
DataPublisher/WaterMonitoring/Factories/: FactoryMessage.cs
DataPublisher/WaterMonitoring/Interfsces/: IFactoryMessage.cs
DataPublisher/WaterMonitoring/Models/: MonitoringParameters.cs
